[gd_scene load_steps=6 format=1]

[ext_resource path="res://Scripts/SubMenu.gd" type="Script" id=1]
[ext_resource path="res://Graphics/YouWon.png" type="Texture" id=2]
[ext_resource path="res://Graphics/TimeOut.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Retry.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Exit.png" type="Texture" id=5]

[node name="Node2D" type="Node2D"]

transform/pos = Vector2( 180, 320 )
script/script = ExtResource( 1 )

[node name="BkgWon" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="BkgLose" type="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="Retry" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -127.0
margin/top = 69.0
margin/right = 127.0
margin/bottom = 145.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = true

[node name="Exit" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -127.0
margin/top = 167.0
margin/right = 127.0
margin/bottom = 243.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = true

[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]


